welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:3: error: reassignment to val
if (weekday=false&&vacation=false)
           ^sleepIn:3: error: type mismatch;
 found   : Unit
 required: Boolean
if (weekday=false&&vacation=false)
^